integrations/wasm/rust/crates/angular-ts/tests/ui/inject_rejects_plain_string.stderr
error: `#[inject]` fields must be `Option<T>` service/value slots or `WasmScope` for `$scope`
 --> tests/ui/inject_rejects_plain_string.rs:6:12
  |
6 |     title: String,
  |            ^^^^^^
