integrations/wasm/rust/crates/angular-ts/tests/ui/inject_rejects_plain_string.rs
use angular_ts::component;

#[component(selector = "bad-component", template = "")]
pub struct BadComponent {
    #[inject(token = "title")]
    title: String,
}

fn main() {}
